--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-* Message: Everything will come from firebase *
-FB_API_KEY=
-FB_AUTH_DOMAIN=
-FB_PROJECT_ID=
-FB_STORAGE_BUCKET=
-FB_MESSAGINGSENDERID=
-FB_APP_ID=
+REACT_APP_API_URL=<your server url till /api>
+* Message: Everything will come from firebase for belows *
+REACT_APP_FB_API_KEY=
+REACT_APP_FB_AUTH_DOMAIN=
+REACT_APP_FB_PROJECT_ID=
+REACT_APP_FB_STORAGE_BUCKET=
+REACT_APP_FB_MESSAGINGSENDERID=
+REACT_APP_FB_APP_ID=
