--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
-    "framer-motion": "^7.6.7",
+    "framer-motion": "^7.6.17",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.6.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-scrollable-feed": "^1.3.1",
     "sass": "^1.56.1",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
