--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-scrollable-feed": "^1.3.1",
     "sass": "^1.56.1",
+    "socket.io-client": "^4.5.4",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
