.env.example updated!

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-REACT_APP_API_URL=<your server url till /api>
+REACT_APP_API_ENDPOINT=<your server url with :port>
+REACT_APP_API_URL=<your server + common path if any>
 * Message: Everything will come from firebase for belows *
 REACT_APP_FB_API_KEY=
 REACT_APP_FB_AUTH_DOMAIN=
