CHORE: migrating create-react-app to vite

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-REACT_APP_API_ENDPOINT=<your server url with :port>
-REACT_APP_API_URL=<your server + common path if any>
+VITE_APP_API_ENDPOINT=<your server url with :port>
+VITE_APP_API_URL=<your server + common path if any>
 * Message: Everything will come from firebase for belows *
-REACT_APP_FB_API_KEY=
-REACT_APP_FB_AUTH_DOMAIN=
-REACT_APP_FB_PROJECT_ID=
-REACT_APP_FB_STORAGE_BUCKET=
-REACT_APP_FB_MESSAGINGSENDERID=
-REACT_APP_FB_APP_ID=
+VITE_APP_FB_API_KEY=
+VITE_APP_FB_AUTH_DOMAIN=
+VITE_APP_FB_PROJECT_ID=
+VITE_APP_FB_STORAGE_BUCKET=
+VITE_APP_FB_MESSAGINGSENDERID=
+VITE_APP_FB_APP_ID=
