--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.1.3",
     "firebase": "^9.14.0",
     "framer-motion": "^7.6.17",
@@ -22,19 +23,18 @@
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.6.2",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
     "react-scrollable-feed": "^2.0.2",
     "sass": "^1.56.1",
     "socket.io-client": "^4.5.4",
     "typescript": "^4.9.3",
     "uuid": "^9.0.0",
+    "vite": "^6.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "eslintConfig": {
     "extends": [
