--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@radix-ui/react-popover": "^1.1.4",
+    "@reduxjs/toolkit": "^2.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +24,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.6.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.4.3",
     "react-scrollable-feed": "^2.0.2",
     "sass": "^1.56.1",
